assignment1.html edited online with Bitbucket

--- a/web110/assignment1.html
+++ b/web110/assignment1.html
@@ -1,1 +1,10 @@
 Write paragraphs here.
+	Bitbucket is a collaborative workspace and also a public version control system. This means that this website is
+for editing and working changes to the file system. This website will track everything you do to your repository
+and what other people do as well (if you're working on the same project). This is a great place for people
+to do collaborative work, which is why many professionals will use this (or github). My older brother is actually
+in front end development, and he actually uses github with his coworkers as they work on building their websites.
+In our case, we're going to be using this to turn in our assignemtns and codes and the teacher will be able to 
+fix or make comments to them. I also use github for CIS 106, which has a very similar format to this class. Bitbucket
+github are very similar in functinality. They were created for the same purpose, however I do prefer using github.
+
