assignment1.html edited online with Bitbucket

--- a/web110/assignment1.html
+++ b/web110/assignment1.html
@@ -1,10 +1,46 @@
-Write paragraphs here.
-	Bitbucket is a collaborative workspace and also a public version control system. This means that this website is
-for editing and working changes to the file system. This website will track everything you do to your repository
-and what other people do as well (if you're working on the same project). This is a great place for people
-to do collaborative work, which is why many professionals will use this (or github). My older brother is actually
-in front end development, and he actually uses github with his coworkers as they work on building their websites.
-In our case, we're going to be using this to turn in our assignemtns and codes and the teacher will be able to 
-fix or make comments to them. I also use github for CIS 106, which has a very similar format to this class. Bitbucket
-github are very similar in functinality. They were created for the same purpose, however I do prefer using github.
-
+    The internet is a vast sea of data that everyone can use, with the right connection. People use it for almost anything:
+entertainment, business, school, etc. Internet connections are based on wired connections, which can lead to wireless 
+connections. Even the wifi router has to be plugged in. When approaching a website, the computer will request information 
+from a server. This is where the websites are stored. The server will then send the correct information to the computer. 
+Something interesting that came from the internet is cloud storage. The cloud is pretty much just another way to store data. 
+Instead of directly storing data onto your computers hard drive, one can store data into the cloud which is just usually just 
+an internet server. This is a great tool to share files. For example, Google Drive is a great cloud storage. I use it to share 
+files with my friends and family, or just to create room on my computer. It’s another great way to back up data. This means 
+your data can be stored and saved, in case there is corruption or just damaged data. To access the internet, we use a web 
+browser. This includes browsers such as Google Chrome, Safari (for Apple users), Internet Explorer, and many more. At the 
+top of every browser, a URL must be entered. URL stands for Uniform Resource Locator. This is pretty much the “address” of 
+the website you are trying to reach. Every URL begins with a scheme. This is typically the http or the https at the beginning 
+of the URL. This will then be followed by the domain name. The domain name is the name of the website. For example www.google.com 
+would be the domain name for Google. Each of the parts of the domain name have a purpose. The www is the sub-domain, google is 
+the second level, and .com is the top level. The top level indicates what kind of website you are reaching. There are different 
+top levels that one can use, like: .org, .gov, .edu, etc. This usually indicates what kind of organization, business, institution, 
+etc. you are trying to reach.
+    An IP address stands for Internet Protocol. The address is a unique number that is linked to all your online activity. 
+This is one of the network protocols that your computer uses to deliver and receive information. It will pretty much give 
+each of your actions an address when you do something on the computer. IP addresses are not specific to the computer you are 
+working on. They are different based on the network that you are connected to. For example, your home IP address is going to 
+be different from the one you use at your local coffee shop. This can also help with constructing certain regulations for a 
+website. A website’s functionality may differ, based on the IP address. A site may even block certain countries from visiting 
+their website through their IP address. However, it can also work the opposite way. People can track IP addresses and use them 
+for spamming purposes. This is a very common occurrence. For example, emails spam is very common. Although people may be able 
+to find your computer, it is a bit more difficult to find your exact location through your device. There are websites that 
+can check your IP address for your location, and other services will sometimes give you a general location for when you are 
+using their product. For example, I use Netflix. Every time someone logs into Netflix on a new device, I will receive an email 
+asking me if this was ok. It will also give me a general location of where the device is being used. It will tell me that someone 
+in Illinois is using the account. The email will never give me a location too specific. IP addresses are also used by law 
+enforcement. They will work with inter service providers to see what kind of illegal media/information is being moved on 
+the internet.
+    Traceroute is a command-line tool within the Windows operating system. This is a tool used to understand Internet connection 
+and what may be wrong. When you connect to a website, you will be connected to your router, then the internet provider, then 
+an even bigger system. There are pathways that your computer must take to retrieve or put out data. Traceroute can show us the 
+path that the computer is taking. This can show us if something went wrong in certain paths. On Windows, traceroute is run 
+through a command prompt/terminal. When this is executed, the terminal will display a list of speeds and IP addresses. The 
+first one will usually be your router, then the Internet Service Provider’s. One annotation you will see is called HOP. Hop 
+is an indication however many packets have passed between a router. So, your computer can jump from state to state just to get 
+to one website. RTT1, 2, and 3 refer to the time that for that information to take a round trip, from the destination back to 
+the computer. This is usually referred to as latency, which I usually just refer to ping. The traceroute will do this three 
+times to make sure there is consistency within the connection. I actually ran this myself on my own computer, and it was a lot 
+slower than I thought it would be. I’m not sure if this is because I was on the school’s wifi (which is terrible), the website, 
+or my computer. I received quite a few * characters, which indicates that the packet was probably lost. However, by the end of 
+the run, I did receive the IP address for the website I was trying to reach. I’m assuming that every website is going to be unique, 
+depending on what kind of servers they have set up.
