assignment2.html edited online with Bitbucket

--- a/web110/assignment2.html
+++ b/web110/assignment2.html
@@ -6,7 +6,7 @@ to retrieve, present, and traverse information on the World Wide Web. This means
 World Wide Web, you need to use a web browser. When accessing a web site, the browser will read a URI and this determines how the
 URL will be interpreted. The web page will then send HTML and other content through it’s system and change the languages into
 interactive material. Most web pages will be made up of more than HTML. In one of the activities, there is a website that shows
-the accessibility of HTML in web browsers. It was interesting to me that Internet Explorer was 100 percent accessible and Google
+the accessibility of HTML in web browsers. It was interesting to me that Edge 16 was 100 percent accessible and Google
 Chrome was only 92% accessible. From what I understand from the article, this means that Chrome is not entirely made up of HTML,
 but has incorporated other languages into the page. Such as Javascript or CSS. Browsers can also have extensions. Extensions are just
 modular tools of a web browser. For example, many people will install ad-block onto their browser. Ad-block is an extension that will block
