--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Brian Kuk
+<!DOCTYPE html>
+<html>
+    <head>
+        <h1>Brian Kuk</h1>
+    </head>
+    <body>
+        <a href="web110">Web 110</a>
+    </body>
+</html>
