--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <h1>Brian Kuk</h1>
     </head>
     <body>
-        <a href="web110">Web 110</a>
+        <ul>
+            <li><a href="web110/assignment1.html">Assignment 1</a></li>
+            <li><a href="web110/assignment2.html">Assignment 2</a></li>
+            <li><a href="web110/assignment3.html">Assignment 3</a></li>
+            <li><a href="web110/assignment4.html">Assignment 4</a></li>
+            <li><a href="web110/assignment5.html">Assignment 5</a></li>
+            <li><a href="web110/assignment6.html">Assignment 6</a></li>
+            <li><a href="web110/assignment7.html">Assignment 7</a></li>
+            <li><a href="web110/assignment8.html">Assignment 8</a></li>
+            <li><a href="web110/assignment9.html">Assignment 9</a></li>
+        </ul>
     </body>
 </html>
