--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <h1>Brian Kuk</h1>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <ul>
