--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li><a href="web110/assignment7.html">Assignment 7</a></li>
             <li><a href="web110/assignment8.html">Assignment 8</a></li>
             <li><a href="web110/assignment9.html">Assignment 9</a></li>
+            <li><a href="web110/assignment10.html">Assignment 10</a></li>
+
         </ul>
     </body>
 </html>
