--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="web110/assignment8.html">Assignment 8</a></li>
             <li><a href="web110/assignment9.html">Assignment 9</a></li>
             <li><a href="web110/assignment10.html">Assignment 10</a></li>
+            <li><a href="web110/assignment11.html">Assignment 11</a></li>
 
         </ul>
     </body>
