--- a/web110/assignment11.html
+++ b/web110/assignment11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <img= RasterImage.pssd>
-        <img= VectorImage.ai>
+        <img src= "">
+        <img src= ">
     </body>
 </html>
