--- a/web110/assignment11.html
+++ b/web110/assignment11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <img src= "">
-        <img src= ">
+        <img src= "RasterImage.jpeg">
+        <img src= "VectorImage.jpeg">
     </body>
 </html>
