--- a/web110/assignment11.html
+++ b/web110/assignment11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <img src= "RasterImage">
-        <img src= "VectorImage">
+        <img src= "RasterImage" alt="Raster Image"/>
+        <img src= "VectorImage" alt="Vector Image"/>
     </body>
 </html>
