--- a/web110/assignment11.html
+++ b/web110/assignment11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <img src= "RasterImage" alt="Raster Image"/>
-        <img src= "VectorImage" alt="Vector Image"/>
+        <img src= "RasterImage.png" alt="Raster Image" width= "500" height= "400"/>
+        <img src= "VectorImage.png" alt="Vector Image"/>
     </body>
 </html>
