--- a/web110/assignment11.html
+++ b/web110/assignment11.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <h1>
+            Assignment 11
+            <link rel="stylesheet" type="text/css" href="style.css" />
+        </h1>
+    </head>
     <body>
-        <img src= "RasterImage.png" alt="Raster Image" width= "500" height= "400"/>
-        <img src= "VectorImage.png" alt="Vector Image"/>
+        <p>
+            In this assignment, we learned how to take outside elements and add them to our web pages. The first part of this lesson was learning about different images. Then, raster and vector graphics were introduced. In raster graphics, the images are broken down by pixel. These pixels then each have a color code, depending on what color it is. Vectors use sets of equations to create the shapes in the images. The image is made up of these equations rather than pixels. So between the two, the raster graphic is going to contain more data because there’s more to read than just equations. We then learned how to create these images and place them into our web pages. Instead of using the suggested programs to create these images, I decided to use Photoshop and Illustrator. The articles/videos said that most of these files are created this way, and I have it downloaded on my computer already so I just went with it. The raster image was created on photoshop, because this program creates images based on pixels. The next image is something I created in Illustrator for my GRA class. This is the vector image because Illustrator creates images with vectors. Then, I used different tags to manipulate the images, like height or width. After this we learned to create/place in audio and video files. This was a similar process, except instead of choosing a local file, we were given a link. This was confusing to me because I had spent some time on these links until I figured out that we need to click on each link and copy those URLs for each type of file. The last step was to include a link for a YouTube video. This one was surprisingly easy, as YouTube would do all the work for us. It was interesting to see that YouTube will automatically share a iframe tag for html code like this.
+        </p>
+        <audio controls>
+            <source src="http://media.w3.org/2010/05/sound/sound_5.mp3" type="audio/mp3">
+            <source src="http://media.w3.org/2010/05/sound/sound_5.mp4" type="audio/mp4">
+            <source src="http://media.w3.org/2010/05/sound/sound_5.oga" type="audio/oga">
+        </audio>
+        <video controls>
+            <source src="http://media.w3.org/2010/05/video/movie_5.mp4" type="video/mp4">
+            <source src="http://media.w3.org/2010/05/video/movie_5.ogv" type="video/ogv">
+            <source src="http://media.w3.org/2010/05/video/movie_5.webm" type="video/webm">
+        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RGf_iSqR4I0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <img src="RasterImage.png" alt="Raster Image" width= "500" height= "400"/>
+        <img src="VectorImage.png" alt="Vector Image"/>
     </body>
 </html>
