--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="web110/assignment9.html">Assignment 9</a></li>
             <li><a href="web110/assignment10.html">Assignment 10</a></li>
             <li><a href="web110/assignment11.html">Assignment 11</a></li>
+            <li><a href="web110/assignment12.html">Assignment 12</a></li>
 
         </ul>
     </body>
