--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="web110/assignment10.html">Assignment 10</a></li>
             <li><a href="web110/assignment11.html">Assignment 11</a></li>
             <li><a href="web110/assignment12.html">Assignment 12</a></li>
+            <li><a href="web110/assignment13.html">Assignment 13</a></li>
 
         </ul>
     </body>
