--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="web110/assignment11.html">Assignment 11</a></li>
             <li><a href="web110/assignment12.html">Assignment 12</a></li>
             <li><a href="web110/assignment13.html">Assignment 13</a></li>
+            <li><a href="web110/assignment14.html">Assignment 14</a></li>
 
         </ul>
     </body>
