--- a/web110/assignment15.html
+++ b/web110/assignment15.html
@@ -11,7 +11,7 @@
 
         </p>
 
-        <a href="">LinkEdIn</a>
+        <a href="https://www.linkedin.com/in/brian-kuk-157149178/">LinkEdIn</a>
 
         <p>
 
