--- a/web110/assignment15.html
+++ b/web110/assignment15.html
@@ -7,14 +7,16 @@
         </h1>
     </head>
     <body>
+        <h2>Career Objective/Plan</h2>
         <p>
-
+            So, I’ve come to Harper with the intent to graduate with an Associates Degree in Web Development. I’m still not sure if I want to work in front end, back end, or both. However, I do know that I would like to work with websites. Over the next year and a half, I plan to practice languages such as HTML, CSS, and Javascript to prepare for a job in this field. Something that I could also do is look into current web development jobs and look at what kinds of languages companies would like their developers to know. Languages like Ruby or C# could be useful. Something I also may have to think about is will I be good enough at these languages to be prepared for a job. I’ve been looking into development bootcamps that are about a semester long. These bootcamps teach and prepare you for skills that web developers need. It is important to prepare for the future, however right now I need to focus on learning and mastering these languages.
         </p>
 
         <a href="https://www.linkedin.com/in/brian-kuk-157149178/">LinkEdIn</a>
 
+        <h2>Learning Summary</h2>
         <p>
-
+            This chapter was pretty straightforward. The chapter is called IT Careers and goes in depth on how to start and approach your career, however it does not just talk about IT jobs. The chapter goes on to list different types of computer based jobs. This includes computer systems analysts, database administrator, information security analyst, software developer, or web developer. I myself am interested in becoming a web developer, and possibly designer. I have a little bit of experience in front end languages like HTML and CSS, however it’s all just the basics. I know how to change the colors or place some text, but I hope to learn more than this through the next courses. To prepare us for these careers, there were different activities placed so we could get started. One of the activities was a career planning activity. It basically has us review what we need to do to prepare for job hunting. One of the articles included steps like understanding salary, knowing what skills you may need to know in that field, creating a plan for your career, etc. It also included an article about how to physically look for one and creating connections through networking. We were also tasked to look into creating a good resume and even creating a LinkEd in profile. Now, my resume is a bit bare, considering that I’ve never had a professional career before. The most I’ve done is have a part time job every year. But through these part time jobs, I’ve acquired experience that some people may need. For example, customer service. I’ve worked in retail and a restaurant, so I’ve got a little bit of customer service to put on my resume. It’s small, but it is something. It can show that I know how to talk to others and that I have adequate social skills. With all this in mind, I’m sure most of us have a bit of time to think this over. But, it is good to start thinking about this.
         </p>
     </body>
 </html>
