--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="web110/assignment13.html">Assignment 13</a></li>
             <li><a href="web110/assignment14.html">Assignment 14</a></li>
             <li><a href="web110/assignment15.html">Assignment 15</a></li>
-
+            <li><a href="web110/final_project.html">Final Project</a></li>
         </ul>
     </body>
 </html>
