--- a/web110/final_project.html
+++ b/web110/final_project.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <h1>
-            Final Project
+            Final Project: HTML Basics
             <link rel="stylesheet" type="text/css" href="style.css" />
         </h1>
     </head>
