--- a/web110/final_creating.html
+++ b/web110/final_creating.html
@@ -7,6 +7,15 @@
         </h1>
     </head>
     <body>
-
+        <p>
+            The first step is to create an html file. This is very simple, just open up a text editor and save it as something.html. This will tell the computer that it is saved as an HTML file. I included this step because it was not very obvious to me how to start the web development process and because step one is the most important.
+        </p>
+        <p>
+            We then need to tell the file that we are going to be writing in HTML. We can do this by including a "!DOCTYPE html" in angle brackets at the top of the file. This is basically telling the file that HTML is going to be written in the file.
+        </p>
+        <p>
+            Now, something that needs to be understood before we move on is tags. HTML documents are made up of tags, and they are composed of elements, which is the content within the tags. Every tag is going to have an opening and closing element. That will look like this:
+        </p>
+        <img scr="paragraph.PNG" alt="Paragraph Tag">
     </body>
 </html>
