--- a/web110/final_add.html
+++ b/web110/final_add.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <h1>
-            Creating a Basic HTML File
+            Basics of Adding Content
             <link rel="stylesheet" type="text/css" href="style.css" />
         </h1>
     </head>
     <body>
-        
+
     </body>
 </html>
