--- a/web110/final_project.html
+++ b/web110/final_project.html
@@ -14,8 +14,8 @@
             HTML stands for Hypertext Markup Language. It is the language used to create web pages and applications. HTML is the general structure of a website, something like a skeleton. One would add general content to a website using this language. This includes elements such as text, images, videos, etc. This is not to be confused with style and programming languages such as JavaScript or CSS (Cascading Style Sheets). HTML revolves around other languages to bring the whole web page/app together. If a website was only made out of HTML, it would look very bland with just a page with text and images. We can include languages like CSS or JavaScript to style the website and program it to have different interactions. I like to think of HTML as the body while CSS and JavaScript are like clothing. Right now, the latest version of HTML is called HTML5, which is the fifth version and is the most updated.
         </p>
         <ul>
-            <li><a href="final_creating.html">Creating a Basic HTML File</a></li>
-            <li><a href="final_creating.html">Basics of Adding Content</a></li>
+            <li><a href="final_start.html">Creating a Basic HTML File</a></li>
+            <li><a href="final_add.html">Basics of Adding Content</a></li>
         </ul>
     </body>
 </html>
