--- a/web110/final_add.html
+++ b/web110/final_add.html
@@ -7,6 +7,38 @@
         </h1>
     </head>
     <body>
-
+        <p>
+            To have a website or page, you would need content. What is the subject of the site? Who is your audience? Do you have enough information? Depending on what you would like to add to the page, you are going to use a different tag.
+        </p>
+        <h2>
+            Heading and Paragraphs
+        </h2>
+        <p>
+            One of the most important tags is the paragraph tag. The p stands for paragraph. The paragraphs are generally within the body. The next one is the header tag. This is represented by h#. The number sign represents the size of the heading. The number one being the largest and six being very small. Both of these tags require a closing tag.
+        </p>
+        <img src="heading paragraph.png" alt="Heading and Paragraph"/>
+        <p>
+            These are generally text placement tags, so displaying text is one of the more simple tasks.
+        </p>
+        <h2>
+            Images, Video and Audio
+        </h2>
+        <p>
+            Images are fairly simple to implement to a website. All that’s needed is an img tag. This is a self closing tag, so this means we won’t need a /img tag at all. Image tags include a few different attributes for them. This is what it would look like:
+        </p>
+        <img src="images.png" alt="Images"/>
+        <p>
+            So scr represents the source of the file. Where is the file and where did it come from? Alt is the description for the image when it appears on the page. If you hover over an image, sometimes there may be a description that appears for it. Then the width and the height are pretty self explanatory. We can change the size of the image to what we want. This is normally done in the unit of pixels.
+        </p>
+        <p>
+            Next is the video and audio tags. I grouped these together because they are placed in basically the same way. These are not self closing tags. Other than this, they are fairly similar to the img tag. 
+        </p>
+        <img src="video audio.png" alt="Video and Audio"/>
+        <p>
+            So to open the tag, you will need to specify whether you want an audio or video tag. After that I added a controls attribute. This is also where you would control the size of the output. This creates a control panel to control the video or audio file. The src is the same as before, the source or location of the file. Now why are there two elements in the tag? We don’t know what kind of browser the user is using and if the browser supports that specific file. So to compensate, we need to include different types of files to ensure that the video will work.
+        </p>
+        <p>
+            It doesn’t just end there. You can implement other websites, create links, and much more. Now, there’s only so much that HTML can do, so this is where other languages come in, as I mentioned before. Learning the basics of HTML is not too difficult, the hard part is putting it together with other languages such as CSS and JavaScript.
+        </p>
     </body>
 </html>
