--- a/web110/final_project.html
+++ b/web110/final_project.html
@@ -17,5 +17,8 @@
             <li><a href="final_start.html">Creating a Basic HTML File</a></li>
             <li><a href="final_add.html">Basics of Adding Content</a></li>
         </ul>
+        <p>
+            If you would like to learn more, I suggest <a href="https://www.theodinproject.com/"> The Odin Project.</a> This is a great resource for people who want to go into web development, but do not have any experience.
+        </p>
     </body>
 </html>
