--- a/web110/final_add.html
+++ b/web110/final_add.html
@@ -26,7 +26,7 @@
         <p>
             Images are fairly simple to implement to a website. All that’s needed is an img tag. This is a self closing tag, so this means we won’t need a /img tag at all. Image tags include a few different attributes for them. This is what it would look like:
         </p>
-        <img src="images.png" alt="Images"/>
+        <img src="image.png" alt="Images"/>
         <p>
             So scr represents the source of the file. Where is the file and where did it come from? Alt is the description for the image when it appears on the page. If you hover over an image, sometimes there may be a description that appears for it. Then the width and the height are pretty self explanatory. We can change the size of the image to what we want. This is normally done in the unit of pixels.
         </p>
